test/bad/type_missmatch_17.mpp
fun bar(y:bool):bool { return true; };

print bar(1);
